<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Wetter</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_information_available">No weather information available</string>
    <string name="not_connected">Not connected</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_location_default" translatable="false">Germany/Berlin</string>
    <string name="pref_sync_label">Sync Interval (minutes)</string>
    <string name="pref_sync_key" translatable="false">syncInterval</string>
    <string name="pref_sync_default" translatable="false">60</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_wind_label">Wind Speed Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_kmh">km/h</string>
    <string name="pref_units_label_kn">kn</string>
    <string name="pref_units_label_bf">bf</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_wind_key" translatable="false">units_wind</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_wind_kmh" translatable="false">kmh</string>
    <string name="pref_units_wind_kn" translatable="false">kn</string>
    <string name="pref_units_wind_bf" translatable="false">bf</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_theme_label">Theme</string>
    <string name="pref_theme_label_night">Night</string>
    <string name="pref_theme_label_day">Day</string>
    <string name="pref_theme_label_auto">Auto</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_night" translatable="false">night</string>
    <string name="pref_theme_day" translatable="false">day</string>
    <string name="pref_theme_auto" translatable="false">auto</string>
    <string name="pref_provider_label">Weather Provider</string>
    <string name="pref_provider_label_owm">OpenWeatherMap</string>
    <string name="pref_provider_label_wug">Weather Underground</string>
    <string name="pref_provider_key" translatable="false">provider</string>
    <string name="pref_provider_owm" translatable="false">owm</string>
    <string name="pref_provider_wug" translatable="false">wug</string>
    <string name="notification_restart" translatable="false">Restart required for applying new settings!</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_enable_hourly_forecast_key" translatable="false">enable_hourly_forecast</string>
    <string name="pref_enable_hourly_forecast_label">Hourly Forecast</string>
    <string name="pref_enable_hourly_forecast_true">Enabled</string>
    <string name="pref_enable_hourly_forecast_false">Not Enabled</string>
    <string name="pref_enable_hourly_forecast_default" translatable="false">true</string>
    <string name="pref_api_key_key" translatable="false">Openweathermap API key</string>
    <string name="pref_api_key_label">Openweathermap API key</string>
    <string name="dialog_api_key_title">Openweathermap API key</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_art_pack_label">Icon Pack</string>
    <string name="pref_art_pack_label_sunshine">Sunshine</string>
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>
    <string name="pref_art_pack_label_owm">OWM icons</string>
    <string name="pref_art_pack_key" translatable="false">art_pack</string>
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>
    <string name="pref_art_pack_owm" translatable="false">http://openweathermap.org/img/w/%s.png</string>
    <string name="pref_art_pack_wug_label">WUG icons</string>
    <string name="pref_art_pack_label_wug_alt_black">WUG alternative black icons</string>
    <string name="pref_art_pack_label_wug_alt_white">WUG alternative white icons</string>
    <string name="pref_art_pack_label_wug">WUG icons</string>
    <string name="pref_art_pack_wug_key" translatable="false">art_pack_wug</string>
    <string name="pref_art_pack_wug" translatable="false">https://icons.wxug.com/i/c/i/%s.gif</string>
    <string name="pref_art_pack_wug_alt_white" translatable="false">https://raw.githubusercontent.com/manifestinteractive/weather-underground-icons/master/dist/icons/white/png/128x128/%s.png</string>
    <string name="pref_art_pack_wug_alt_black" translatable="false">https://raw.githubusercontent.com/manifestinteractive/weather-underground-icons/master/dist/icons/black/png/128x128/%s.png</string>
    <string name="pref_delete_data_key" translatable="false">delete_weather_data</string>
    <string name="pref_delete_data_label" translatable="false">Delete all weather data!</string>
    <string name="deleted_weather_data" translatable="false">Deleted all weather data!</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_small_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_small_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_small_wind_kn"><xliff:g id="speed">%1$1.0f</xliff:g> kn <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_small_wind_bf"><xliff:g id="speed">%1$1.0f</xliff:g> bf <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type">wetter.sindzinski.de</string>
    <string name="content_authority">de.sindzinski.wetter</string>
    <string name="format_notification">
    Current: <xliff:g id="condition">%1$s</xliff:g> Temp: <xliff:g id="temp">%2$s</xliff:g>
    </string>
    <string name="pref_last_sync">last_sync</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="title_widget_today">Wetter Today</string>
    <string name="title_widget_detail">Wetter Details</string>
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="nav_home">Home</string>
    <string name="nav_add_location">Add location</string>
    <string name="nav_remove_current_location">Remove current location</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
</resources>