<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto/de.sindzinski.sunshine"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.sindzinski.wetter.ApiKeyEditTextPreference
        android:title="@string/pref_api_key_label"
        android:key="@string/pref_api_key_key"
        android:defaultValue=""
        android:inputType="text"
        custom:minLength="10"
        android:singleLine="true" />

    <de.sindzinski.wetter.LocationEditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        custom:minLength="4"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />

    <ListPreference
        android:title="@string/pref_art_pack_label"
        android:key="@string/pref_art_pack_key"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entryValues="@array/pref_art_pack_values"
        android:entries="@array/pref_art_pack_options" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_hourly_forecast_label"
        android:key="@string/pref_enable_hourly_forecast_key"
        android:summaryOff="@string/pref_enable_hourly_forecast_false"
        android:summaryOn="@string/pref_enable_hourly_forecast_true"
        android:defaultValue="@string/pref_enable_hourly_forecast_default" />

    <ListPreference
        android:title="@string/pref_theme_label"
        android:key="@string/pref_theme_key"
        android:defaultValue="@string/pref_theme_night"
        android:entryValues="@array/pref_theme_values"
        android:entries="@array/pref_theme_options" />

    <ListPreference
        android:title="@string/pref_provider_label"
        android:key="@string/pref_provider_key"
        android:defaultValue="@string/pref_provider_owm"
        android:entryValues="@array/pref_provider_values"
        android:entries="@array/pref_provider_options" />

</PreferenceScreen>
