<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1"
        android:orderInCategory="10"
        android:checkableBehavior="single">
    </group>
    <group android:id="@+id/group2"
        android:orderInCategory="100">
        <item
            android:id="@+id/nav_add_location"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_add_location" />
        <item
            android:id="@+id/nav_remove_current_location"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_remove_current_location" />
    </group>
    <group android:id="@+id/group3"
        android:orderInCategory="999">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_home" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/nav_settings" />
            </menu>
     </group>
</menu>